<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.popularmobileapp.MovieActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_margin="0dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>


        <ImageView
            android:id="@+id/movieposterImage"
            android:layout_width="214dp"
            android:layout_height="246dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_below="@+id/appBarLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/titleText"
            android:layout_alignEnd="@+id/titleText"
            app:layout_constraintTop_toBottomOf="@+id/titleText"
            app:layout_constraintLeft_toLeftOf="@+id/appBarLayout"
            />

        <EditText
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/appBarLayout"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:focusable="false"
            android:text="@string/Null"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/appBarLayout"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="150dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText6"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textSize="18sp"
            android:focusable="false"
            android:text="@string/Null"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            android:layout_marginLeft="14dp"
            app:layout_constraintLeft_toLeftOf="@+id/editText6" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="150dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText7"
            android:ems="10"
            android:textSize="18sp"
            android:focusable="false"
            android:text="@string/Null"
            app:layout_constraintTop_toBottomOf="@+id/editText7"
            app:layout_constraintLeft_toLeftOf="@+id/editText6" />

        <TextView
            android:id="@+id/descText"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dateText"
            android:layout_gravity="fill"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="9dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="9dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textSize="18sp"
            android:focusable="false"
            android:text="@string/Null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/movieposterImage"
            app:layout_constraintRight_toRightOf="@+id/dateText"
            app:layout_constraintTop_toBottomOf="@+id/movieposterImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="150dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/movieposterImage"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:focusable="false"
            android:text="@string/overallRating"
            app:layout_constraintTop_toBottomOf="@+id/favoriteButton"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@+id/movieposterImage"
             />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="150dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ratingText"
            android:ems="10"
            android:textSize="18sp"
            android:focusable="false"
            android:text="@string/releaseDate"
            app:layout_constraintTop_toBottomOf="@+id/ratingText"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="@+id/editText6" />

        <ListView
            android:id="@+id/trailersListView"
            android:layout_width="360dp"
            android:layout_height="130dp"
            android:layout_marginTop="70dp"
            android:nestedScrollingEnabled="true"
            android:layout_marginLeft="0dp"
            app:layout_constraintHorizontal_weight="0"
            app:layout_constraintTop_toBottomOf="@+id/descText"
            app:layout_constraintLeft_toLeftOf="@+id/tra"
            tools:layout_editor_absoluteX="19dp" />

        <EditText
            android:id="@+id/trailerTextBox"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:focusable="false"
            android:text="@string/trailerText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/trailersListView"
            app:layout_constraintLeft_toLeftOf="@+id/trailersListView"
            app:layout_constraintTop_toBottomOf="@+id/descText"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/reviewsTextView"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="8dp"
            android:focusable="false"
            android:text="@string/reviewsText"
            android:textColor="@color/black"

            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@+id/trailersListView"
            app:layout_constraintTop_toBottomOf="@+id/trailersListView"
            android:layout_marginTop="8dp" />

        <ListView
            android:id="@+id/reviewsListView"
            android:layout_width="360dp"
            android:layout_height="130dp"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/reviewsTextView"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/reviewsTextView" />

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:onClick="favoriteButtonClick"
            app:layout_constraintRight_toRightOf="@+id/appBarLayout"
            app:layout_constraintTop_toTopOf="@+id/titleText"
            app:layout_constraintVertical_bias="0.511"
            app:layout_constraintBottom_toBottomOf="@+id/titleText"
            app:layout_constraintLeft_toRightOf="@+id/titleText"
            android:layout_marginLeft="150dp" />

    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>
</ScrollView>